crates/analyzer/tests/snapshots/errors__circular_type_alias.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: recursive type definition
  ┌─ compile_errors/circular_type_alias.fe:1:1
  │
1 │ type A = Map<address, B>
  │ ^^^^^^^^^^^^^^^^^^^^^^^^

error: recursive type definition
  ┌─ compile_errors/circular_type_alias.fe:3:1
  │
3 │ type B = Map<address, C>
  │ ^^^^^^^^^^^^^^^^^^^^^^^^

error: recursive type definition
  ┌─ compile_errors/circular_type_alias.fe:5:1
  │
5 │ type C = Map<address, A>
  │ ^^^^^^^^^^^^^^^^^^^^^^^^


